k8s/pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      component: pg
  template:
    metadata:
      labels:
        component: pg
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: pg-pvc
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              # subPath: postgres
