k8s/vidly-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vidly-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      component: vidly

  template:
    metadata:
      labels:
        component: vidly
    spec:
      containers:
        - name: vidly
          image: arwedstorm/vidly
          ports:
            - containerPort: 3000
