k8s/pg-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-cluster-ip-service

spec:
  type: ClusterIP
  selector:
    component: pg
  ports:
    - port: 5432
      targetPort: 5432
