k8s/pg-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-loadbalancer-service

spec:
  type: LoadBalancer
  selector:
    component: pg
  ports:
    - port: 6000
      targetPort: 5432
