k8s/vidly-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vidly-cluster-ip-service

spec:
  type: ClusterIP
  selector:
    component: vidly
  ports:
    - port: 3000
      targetPort: 3000
